--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,7 @@
-<!DOCTYPE HTML>
-<html lang="en-US">
-<head>
-	<meta charset="UTF-8">
-	<title><%= title %></title>	
-</head>
-<body>
-	<%- body %>
-</body>
-</html>
+<% layout('layout') %>
+<% script('jquery-1.8.2.min.js') %>
+<% script('main.js') %>
+<% stylesheet('styles.css') %>
+<h1><%= message %></h1>
+<% block('header', '<p>Header</p>') %>
+<% block('footer', '<p>Footer</p>') %>
