--- a/public/styles.css
+++ b/public/styles.css
@@ -5,7 +5,7 @@ html, body, a, p, div, img, span, br, nav, section, aside, footer, header, table
 }
 
 .page {
-	width: 70%;
+	width: 80%;
 	margin: 0 auto;
 	font:16px Arial;
 	color:#333;
@@ -45,4 +45,35 @@ html, body, a, p, div, img, span, br, nav, section, aside, footer, header, table
 
 .page nav a:hover {
 	background:Gray;
+}
+
+.common-form fieldset {
+	border-radius:10px;
+	width:50%;
+}
+
+.common-form input[type=text] {
+	width:250px;
+	float:right;
+	font:16px Arial;
+	color:#333;
+	padding:1px;
+	margin:3px;
+}
+
+.common-form input[type=submit] {
+	clear:both;
+	float:right;
+	font:16px Arial;
+	color:#333;
+	padding:5px;
+	margin:3px;
+}
+
+.common-form label {
+	display:block;
+	clear:both;
+	float:left;
+	padding:1px;
+	margin:3px;
 }
