--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -1,3 +1,4 @@
 <a href="/">Home</a>
-<a href="/products">My Products</a>
-<a href="/dishes">My Dishes</a>
+<a href="/products/list">My Products</a>
+<a href="/products/add">Add Product</a>
+<a href="/dishes/list">My Dishes</a>
