--- a/views/products.ejs
+++ b/views/products.ejs
@@ -1,7 +1,7 @@
 <% layout('layout') %>
-<% script('jquery-1.8.2.min.js') %>
-<% script('main.js') %>
-<% stylesheet('styles.css') %>
+<% script('/jquery-1.8.2.min.js') %>
+<% script('/main.js') %>
+<% stylesheet('/styles.css') %>
 
 <h1><%= message %></h1>
 
