--- a/public/styles.css
+++ b/public/styles.css
@@ -77,3 +77,11 @@ html, body, a, p, div, img, span, br, nav, section, aside, footer, header, table
 	padding:1px;
 	margin:3px;
 }
+
+.entry {
+	padding:10px;
+	border:1px solid #333;
+	border-radius:10px;
+	margin:4px 0 0 0;
+	width:500px;
+}
