--- a/views/products.ejs
+++ b/views/products.ejs
@@ -4,6 +4,27 @@
 <% stylesheet('/styles.css') %>
 
 <h1><%= message %></h1>
+<div id="products"/>
+<script type="text/javascript">
+	$.ajax({
+		type: 'GET',
+		url: '/api/products/list/',
+		data: {},
+		success: function(response) {
+			if (response.hasOwnProperty('error')) {
+				var reason = response.hasOwnProperty('reason') ? response.reason : 'unknown';
+				$('#products').css({color: 'Red'}).html('Error occurred on the server. Reason: ' + reason);				
+			} else {
+				for (var i = 0; i < response.length; i++) {
+					var item = $('<div />', {class: 'entry'});
+					$('<p />', {html: '<strong>Product Name:</strong> ' + response[i].value.name + ' UAH'}).appendTo(item);
+					$('<p />', {html: '<strong>Product Price:</strong> ' + response[i].value.price + ' UAH'}).appendTo(item);
+					item.appendTo('#products');
+				}
+			}
+		}
+	});
+</script>
 
 <% block('header', '') %>
 <% block('footer', '') %>
