enable single page adding products

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -1,4 +1,4 @@
 <a href="/">Home</a>
 <a href="/products/list">My Products</a>
-<a href="/products/add">Add Product</a>
+<a id="add-product-menu" href="/products/add">Add Product</a>
 <a href="/dishes/list">My Dishes</a>
