--- a/views/products.ejs
+++ b/views/products.ejs
@@ -5,18 +5,31 @@
 
 <h1><%= message %></h1>
 <div id="products"/>
+<div id="ajax-save-product">
+	<fieldset>
+		<legend><%= legend %></legend>
+		<form action="/api/products/add" id="new-product-form" method="post">
+			<label for="name">Product name:</label>
+			<input type="text" name="name" id="name" />
+			<label for="price">Product price:</label>
+			<input type="text" id="price" name="price" />
+			<input type="submit" value="<%= saveText %>" />
+		</form>
+	</fieldset>
+</div>
 <script type="text/javascript">
 	$.ajax({
 		type: 'GET',
 		url: '/api/products/list/',
 		data: {},
+		cache: false,
 		success: function(response) {
 			if (response.hasOwnProperty('error')) {
 				var reason = response.hasOwnProperty('reason') ? response.reason : 'unknown';
 				$('#products').css({color: 'Red'}).html('Error occurred on the server. Reason: ' + reason);				
 			} else {
 				for (var i = 0; i < response.length; i++) {
-					var item = $('<div />', {class: 'entry'});
+					var item = $('<div />', {'class': 'entry'});
 					$('<p />', {html: '<strong>Product Name:</strong> ' + response[i].value.name + ' UAH'}).appendTo(item);
 					$('<p />', {html: '<strong>Product Price:</strong> ' + response[i].value.price + ' UAH'}).appendTo(item);
 					item.appendTo('#products');
