--- a/views/products.ejs
+++ b/views/products.ejs
@@ -125,6 +125,23 @@
 		return false;
 	});
 
+	$('#remove-product-form').submit(function() {
+		$.ajax({
+			type: 'POST',
+			url: $(this).attr('action'),
+			data: $(this).serialize(),
+			success: function(response) {
+				if (response.error) {
+					$('#products').css({color: 'Red'}).html('Error occurred on the server: ' + response.error.error + '. Reason: ' + response.error.reason);		
+				}
+
+				alert('deleted');
+			}
+		});
+
+		return false;
+	});
+
 	$('#cancelButton').click(function() {
 		$('#modal-dialog').fadeOut();
 	});
