--- a/views/products.ejs
+++ b/views/products.ejs
@@ -1,5 +1,6 @@
 <% layout('layout') %>
 <% script('/jquery-1.8.2.min.js') %>
+<% script('/knockout.min.js') %>
 <% script('/main.js') %>
 <% stylesheet('/styles.css') %>
 
