--- a/views/ko_products.ejs
+++ b/views/ko_products.ejs
@@ -19,16 +19,28 @@
 </div>
 <div data-bind="foreach: products">
 	<div class="entry">
-		<p><strong>Product Name:</strong> <span data-bind="text: name"></span></p>
-		<p><strong>Price:</strong> <span data-bind="text: price"></span></p>
-		<form class="edit-form" method="get" data-bind="attr: {action: getProductUrl }">
-			<input type="submit" value="edit" class="edit-button" />
-		</form>
-		<form class="delete-form" method="post" data-bind="attr: {action: getRemoveUrl }">
-			<input type="hidden" name="id" data-bind="value: id" />
-			<input type="hidden" name="rev" data-bind="value: rev" />
-			<input type="submit" value="remove" class="remove-button" />
-		</form>
+		<div data-bind="visible: itemView">
+			<p><strong>Product Name:</strong> <span data-bind="text: name"></span></p>
+			<p><strong>Price:</strong> <span data-bind="text: price"></span></p>
+		</div>
+		<div data-bind="visible: editView">
+			<form class="edit-form" method="post" data-bind="attr: {action: updateUrl }">
+				<input type="hidden" name="id" data-bind="value: id" />
+				<input type="hidden" name="rev" data-bind="value: rev" />
+				<p><strong>Product Name:</strong> <input type="text" name="name" data-bind="value: name" /></p>
+				<p><strong>Price:</strong> <input type="text" name="price" data-bind="value: price" /></p>
+				<input class="edit-button" type="submit" value="save" />
+				<input class="edit-button" type="button" value="cancel" data-bind="click: $root.cancelUpdate" />
+			</form>
+		</div>
+		<div data-bind="visible: controls">
+			<input type="button" value="edit" class="edit-button" data-bind="click: $root.updateProduct" />
+			<form class="delete-form" method="post" data-bind="attr: {action: removeUrl }">
+				<input type="hidden" name="id" data-bind="value: id" />
+				<input type="hidden" name="rev" data-bind="value: rev" />
+				<input type="submit" value="remove" class="remove-button" />
+			</form>
+		</div>
 		<div class="clear"></div>
 	</div>
 </div>
