added and started using underscore

--- a/views/ko_products.ejs
+++ b/views/ko_products.ejs
@@ -1,6 +1,7 @@
 <% layout('layout') %>
 <% script('/jquery-1.8.2.min.js') %>
 <% script('/knockout.min.js') %>
+<% script('/underscore-min.js') %>
 <% script('/main.js') %>
 <% script('/client-products.js') %>
 <% stylesheet('/styles.css') %>
