--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -2,3 +2,4 @@
 <a href="/products/list">My Products</a>
 <a href="/dishes/list">My Dishes</a>
 <a href="/dev">Development</a>
+<a href="/logout">Logout</a>
