--- a/views/dev.ejs
+++ b/views/dev.ejs
@@ -1,8 +1,8 @@
 <% layout('layout') %>
-<% script('/jquery-1.8.2.min.js') %>
-<% script('/main.js') %>
-<% script('/underscore-min.js') %>
-<% stylesheet('/styles.css') %>
+<% script('/scripts/jquery-1.8.2.min.js') %>
+<% script('/scripts/main.js') %>
+<% script('/scripts/underscore-min.js') %>
+<% stylesheet('/css/styles.css') %>
 
 <h1><%= title %></h1>
 <div class="dev-views">
