--- a/views/products.ejs
+++ b/views/products.ejs
@@ -1,10 +1,11 @@
 <% layout('layout') %>
-<% script('/jquery-1.8.2.min.js') %>
-<% script('/knockout.min.js') %>
-<% script('/underscore-min.js') %>
-<% script('/main.js') %>
-<% script('/client-products.js') %>
-<% stylesheet('/styles.css') %>
+<% script('/scripts/jquery-1.8.2.min.js') %>
+<% script('/scripts/knockout.min.js') %>
+<% script('/scripts/underscore-min.js') %>
+<% script('/scripts/jquery.validate.min.js') %>
+<% script('/scripts/main.js') %>
+<% script('/scripts/client-products.js') %>
+<% stylesheet('/css/styles.css') %>
 
 <h1><%= message %></h1>
 <button id="create-product" class="create-product">Create Product</button>
