--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <% layout('layout') %>
-<% script('jquery-1.8.2.min.js') %>
-<% script('main.js') %>
-<% stylesheet('styles.css') %>
+<% script('/scripts/jquery-1.8.2.min.js') %>
+<% script('/scripts/main.js') %>
+<% stylesheet('/css/styles.css') %>
 <h1><%= message %></h1>
 
 <div class="profile-menu-blocks">
