added database authorization

--- a/views/dev.ejs
+++ b/views/dev.ejs
@@ -12,7 +12,12 @@
 		<div class="cl"></div>
 	</form>
 	<form method="post" class="dev-create" action="/api/dev/accounts/all">
-		<label>Creates accounts/all view:</label>
+		<label>Create accounts/all view:</label>
+		<input type="submit" value="submit" />
+		<div class="cl"></div>
+	</form>
+	<form method="post" class="dev-create" action="/api/dev/accounts/getByEmail">
+		<label>Create accounts/getByEmail view:</label>
 		<input type="submit" value="submit" />
 		<div class="cl"></div>
 	</form>
